--- a/WebTemplate.html
+++ b/WebTemplate.html
@@ -30,7 +30,7 @@
          */
         .iconStyle {
             font-size: 25px;
-            color: #C4C0C1;
+            color: #ffffff;
         }
 
         /**
@@ -86,48 +86,49 @@
 
 <body>
     <!--导航条-->
-    <div class="layui-layout-admin" >
+    <div class="layui-layout-admin " >
         
-            <ul class="layui-nav " lay-filter="" style="text-align: center;">
+            <ul class="layui-nav layui-bg-blue" lay-filter="" style="text-align: center;">
                 <li
                     style="height:50px;width:100px;padding: 0;display:inline-block;*display:inline;*zoom:1;vertical-align:middle;">
                     <!-- logo -->
-                    <i class="layui-icon layui-icon-app" style="font-size: 40px; color: #C4C0C1;"></i>
+<!--                    <i class="layui-icon layui-icon-app" style="font-size: 40px; color: #C4C0C1;"></i>-->
+                    <img src="./img/logoWithBack.png" style="width:100%;height:100%">
                 </li>
 
                 <li class="layui-nav-item ">
-                    <a href="./main" class="dhlStyle" target="layui-body-iframe">
+                    <a href="./main.html" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-home iconStyle"></i>
                         首页
                     </a>
                 </li>
                 <li class="layui-nav-item">
 
-                    <a href="./businessScope" class="dhlStyle" target="layui-body-iframe">
+                    <a href="./businessScope.html" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-senior iconStyle"></i>
                         业务范围
                     </a>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="./secondPeople" class="dhlStyle" target="layui-body-iframe">
+                    <a href="./secondPeople.html" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-username iconStyle"></i>
                         会计师介绍
                     </a>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="./secondClassic" class="dhlStyle" target="layui-body-iframe">
+                    <a href="./secondClassic.html" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-note iconStyle"></i>
                         经典案例
                     </a>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="./caseInProcess2" class="dhlStyle" target="layui-body-iframe">
+                    <a href="./caseInProcess2.html" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-survey iconStyle"></i>
                         处理中案例
                     </a>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="./contactInfo" class="dhlStyle" target="layui-body-iframe">
+                    <a href="./contactInfo.html" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-dialogue iconStyle"></i>
                         联系我们
                     </a>
@@ -151,7 +152,7 @@
     <!-- 内容主体区域 -->
     <div  style="height:90vh;margin:0 auto;text-align: center;">
         <!-- css样式overflow:hidden表示溢出隐藏 -->
-        <iframe src="./main" name="layui-body-iframe" marginwidth="0" marginheight="0" scrolling="yes"
+        <iframe src="./main.html" name="layui-body-iframe" marginwidth="0" marginheight="0" scrolling="yes"
             frameborder="0" height="100%" width="100%" >
             
         </iframe>
