--- a/contactInfo.html
+++ b/contactInfo.html
@@ -92,20 +92,20 @@
 
 <div style="width:90%;text-align: center;margin: 0 auto;">
 	
-    <ul class="layui-nav layui-nav-tree layui-nav-side"  lay-filter="test"
+    <ul class="layui-nav layui-nav-tree layui-nav-side "  lay-filter="test"
 				style="text-align:center;margin:0 auto;background-color: #FFFFFF" >
         <div style="text-align:center; font-size: 25px;color: #0C0C0C;margin:20px 0px;">
             <i class="layui-icon layui-icon-username" style="font-size: 30px; "></i>
             联系我们
         </div>
         <hr class="layui-bg-black" style="margin:0 auto">
-        <li class="layui-nav-item"   ><a href="./thirdInfo_addr" target="contactIframe">地址</a></li>
+        <li class="layui-nav-item"   ><a href="./thirdInfo_addr.html" target="contactIframe">地址</a></li>
         <hr class="layui-bg-black" style="margin:0 auto">
-        <li class="layui-nav-item"><a href="./thirdInfo_email"target="contactIframe">电子邮箱</a></li>
+        <li class="layui-nav-item"><a href="./thirdInfo_email.html"target="contactIframe">电子邮箱</a></li>
         <hr class="layui-bg-black"style="margin:0 auto">
-        <li class="layui-nav-item"><a href="./thirdInfo_tel"target="contactIframe">联系电话</a></li>
+        <li class="layui-nav-item"><a href="./thirdInfo_tel.html"target="contactIframe">联系电话</a></li>
         <hr class="layui-bg-black"style="margin:0 auto">
-        <li class="layui-nav-item"><a href="./thirdInfo_qq"target="contactIframe">QQ/微信</a></li>
+        <li class="layui-nav-item"><a href="./thirdInfo_qq.html"target="contactIframe">QQ/微信</a></li>
         <hr class="layui-bg-black"style="margin:0 auto">
 
 
@@ -114,7 +114,7 @@
     <div  style="height:90vh;margin:0 auto;text-align: center;">
 
         <!-- css样式overflow:hidden表示溢出隐藏 -->
-       <iframe src="./thirdInfo_addr" name="contactIframe" marginwidth="0" marginheight="0" scrolling="yes"
+       <iframe src="./thirdInfo_addr.html" name="contactIframe" marginwidth="0" marginheight="0" scrolling="yes"
             frameborder="0" height="100%" width="100%" >
             
         </iframe>
