--- a/main.html
+++ b/main.html
@@ -72,13 +72,13 @@
         */
         .clzalaStyle {
             font: bold 30px arial, sans-serif;
-            color: #AAAAAA;
+            color: #ffffff;
             height: 200px;
         }
 
         .clzalbStyle {
             font: bold 16px Univers, sans-serif;
-            color: #666666;
+            color: #ffffff;
             height: 40px;
         }
 
@@ -132,15 +132,15 @@
 
 
         <!-- 业务范围-->
-        <div class="layui-card layui-bg-black" style="width:100%;border: #9F9F9F;margin:20px auto;text-align: center;"
+        <div class="layui-card " style="width:100%;border: #9F9F9F;margin:20px auto;text-align: center;background-color: #01AAED"
             id="workToShow">
             <div style="box-shadow: 10px 10px 5px #888888;">
                 <div class="layui-row">
                     <div class="layui-col-md3 layui-col-xs3">
                         <div class="grid-demo grid-demo-bg1">
                             <!--这里的lineheight用来使“业务范围”居中 -->
-                            <div class="kcjywStyle" style="line-height:300px;">
-                                <i class="layui-icon layui-icon-senior iconStyle" style="font-size:50px;"></i>
+                            <div class="kcjywStyle" style="line-height:300px;color: #ffffff">
+                                <i class="layui-icon layui-icon-senior iconStyle" style="font-size:50px;color: #ffffff"></i>
                                 业务范围
                             </div>
                         </div>
@@ -197,8 +197,8 @@
                     <div class="layui-col-md3">
                         <div class="layui-row grid-demo">
                             <div style="padding-top:150px">
-                                <i class="layui-icon layui-icon-note iconStyle" style="font-size:100px;"></i> <br>
-                                <div class="jdanaStyle">
+                                <i class="layui-icon layui-icon-note iconStyle" style="font-size:100px;color: #01AAED"></i> <br>
+                                <div class="jdanaStyle" style="color: #01AAED">
                                     经典案例
                                 </div>
                             </div>
@@ -264,8 +264,8 @@
         </script>
 
         <!-- 处理中案例 -->
-        <div class="layui-card layui-bg-black"
-            style="width:100%;border: #9F9F9F;margin:20px auto;text-align: center;">
+        <div class="layui-card "
+            style="width:100%;border: #9F9F9F;margin:20px auto;text-align: center;background-color: #01AAED">
             <div style="box-shadow: 10px 10px 5px #888888;">
                 <div class="layui-row">
                     <div class="layui-col-md9">
@@ -331,7 +331,7 @@
                     <div class="layui-col-md3">
                         <div class="layui-row grid-demo">
                             <div style="padding-top:150px">
-                                <i class="layui-icon layui-icon-time iconStyle" style="font-size:100px;"></i> <br>
+                                <i class="layui-icon layui-icon-time iconStyle" style="font-size:100px;color: #ffffff"></i> <br>
                                 <div class="clzalaStyle">
                                     处理中案例
                                 </div>
@@ -349,8 +349,8 @@
                     <div class="layui-col-md3">
                         <div class="layui-row grid-demo">
                             <div style="padding-top:150px">
-                                <i class="layui-icon layui-icon-time iconStyle" style="font-size:100px;"></i> <br>
-                                <div class="clzalaStyle">
+                                <i class="layui-icon layui-icon-group iconStyle" style="font-size:100px;color: #01AAED"></i> <br>
+                                <div class="clzalaStyle" style="color: #01AAED">
                                     会计师介绍
                                 </div>
                             </div>
@@ -423,17 +423,17 @@
 
 
         <!-- 尾部信息 -->
-        <div class="layui-card layui-bg-black"
-            style="width:100%; height: 150px; border: #9F9F9F;margin:20px auto;text-align: center;">
+        <div class="layui-card "
+            style="width:100%; height: 150px; border: #9F9F9F;margin:20px auto;text-align: center;background-color: #01AAED">
 
             <div class="layui-row">
                 <div class="layui-col-md8 layui-col-md-offset2">
                     <div class="layui-row grid-demo grid-demo-bg1">
                         <div class="layui-col-md3">
                             <div class="layui-row" style="text-align: center;padding: 12%;">
-                                <a href="./thirdInfo_addr">
+                                <a href="./thirdInfo_addr.html">
                                     <i class="layui-icon layui-icon-location"
-                                        style="font-size: 50px; color: #1E9FFF;"></i> <br>
+                                        style="font-size: 50px; color: #ffffff;"></i> <br>
                                     <div class="clzalaStyle" style="height: 100%;">
                                         地址
                                     </div>
@@ -442,8 +442,8 @@
                         </div>
                         <div class="layui-col-md3">
                             <div class="layui-row" style="text-align: center;padding: 12%;">
-                                <a href="./thirdInfo_email">
-                                    <i class="layui-icon layui-icon-email" style="font-size: 50px; color: #1E9FFF;"></i>
+                                <a href="./thirdInfo_email.html">
+                                    <i class="layui-icon layui-icon-email" style="font-size: 50px; color: #ffffff;"></i>
                                     <br>
                                     <div class="clzalaStyle" style="height: 100%;">
                                         电子邮箱
@@ -453,9 +453,9 @@
                         </div>
                         <div class="layui-col-md3">
                             <div class="layui-row" style="text-align: center;padding: 12%;">
-                                <a href="./thirdInfo_tel">
+                                <a href="./thirdInfo_tel.html">
                                     <i class="layui-icon layui-icon-service"
-                                        style="font-size: 50px; color: #1E9FFF;"></i>
+                                        style="font-size: 50px; color: #ffffff;"></i>
                                     <br>
                                     <div class="clzalaStyle" style="height: 100%;">
                                         联系电话
@@ -465,11 +465,11 @@
                         </div>
                         <div class="layui-col-md3">
                             <div class="layui-row" style="text-align: center;padding: 12%;">
-                                <a href="./thirdInfo_qq">
+                                <a href="./thirdInfo_qq.html">
                                     <i class="layui-icon layui-icon-login-qq"
-                                        style="font-size: 50px; color: #1E9FFF;"></i>
+                                        style="font-size: 50px; color: #ffffff;"></i>
                                     <br>
-                                    <div class="clzalaStyle" style="height: 100%;">
+                                    <div class="clzalaStyle" style="height: 100%;" >
                                         QQ
                                     </div>
                                 </a>
