--- a/thirdInfo_account.html
+++ b/thirdInfo_account.html
@@ -90,20 +90,22 @@
 
 <script src="layui/layui.js"></script>
 
-
 <div style="width:100%;text-align: center;margin: 0 auto;">
+
+
 
     <div style="background-color:#EEEEEE;height:500px;margin-top: 20px;margin-left: 220px">
         <img src="img/CaseInProcess1.jpg" style="float:left;margin: 20px 20px;width:300px">
-        <h1 style="padding: 20px"> 地址</h1>
+        <h1 style="padding: 20px"> 开户信息 </h1>
         <div style="text-align: left">
             <h3>
-                长沙市芙蓉区定王台街道芙蓉中路二段98号明城国际中心1916、1918室
+                纳税人识别号：91430102670758726E
+            </h3><br>
             <h3>
-
-            </h3>
+                开户银行：中国工商银行长沙市韶山路支行窑岭分理处
+            </h3><br>
             <h3>
-                
+                银行账号：1901007609201001463
             </h3>
 
 
