--- a/thirdInfo_email.html
+++ b/thirdInfo_email.html
@@ -96,16 +96,16 @@
 
     <div style="background-color:#EEEEEE;height:500px;margin-top: 20px;margin-left: 220px">
         <img src="img/CaseInProcess1.jpg" style="float:left;margin: 20px 20px;width:300px">
-        <h1 style="padding: 20px"> Email </h1>
+        <h1 style="padding: 20px"> 电子邮箱 </h1>
         <div style="text-align: left">
             <h3>
-                Email:XXXX@hnu.edu.cn
-            </h3>
+                3221672660@qq.com
+            </h3><br>
             <h3>
 
-            </h3>
+            </h3><br>
             <h3>
-                
+
             </h3>
 
 
