--- a/main.html
+++ b/main.html
@@ -128,302 +128,8 @@
             });
         </script>
 
-
-
-
-        <!-- 业务范围-->
-        <div class="layui-card " style="width:100%;border: #9F9F9F;margin:20px auto;text-align: center;background-color: #01AAED"
-            id="workToShow">
-            <div style="box-shadow: 10px 10px 5px #888888;">
-                <div class="layui-row">
-                    <div class="layui-col-md3 layui-col-xs3">
-                        <div class="grid-demo grid-demo-bg1">
-                            <!--这里的lineheight用来使“业务范围”居中 -->
-                            <div class="kcjywStyle" style="line-height:300px;color: #ffffff">
-                                <i class="layui-icon layui-icon-senior iconStyle" style="font-size:50px;color: #ffffff"></i>
-                                业务范围
-                            </div>
-                        </div>
-                    </div>
-                    <div class="layui-col-md3 layui-col-xs3" v-for="work in works">
-                        <div class="grid-demo grid-demo-bg1">
-                            <div class="kcjywStyle">
-                                <div style="padding-top:60px">
-                                    <i class="layui-icon layui-icon-dollar iconStyle" style="font-size:100px;"></i> <br>
-                                    {{ work.name }}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <script>
-            new Vue({
-                el: '#workToShow',
-                data: {
-                    works: []
-                },
-                created: function () {
-                    //为了在内部函数能使用外部函数的this对象，要给它赋值了一个名叫self的变量。
-                    this.getAllWorks()
-                },
-                methods: {
-                    getAllWorks: function () {
-                        var self = this;
-
-                        axios
-                            .get("/Apis/getWorksToShow")
-                            .then(response => (
-                                this.works = response.data.works,
-                                alert(JSON.stringify(response.data))
-                            ))
-                            .catch(function (error) { // 请求失败处理
-                                alert("数据请求失败wdnmd");
-                            });
-
-                    }
-
-                }
-            })
-        </script>
-
-        <!-- 经典案例 -->
-        <div class="layui-card" style="width:100%;border: #9F9F9F;margin:20px auto;text-align: center;"
-            id="caseToShow">
-            <div style="box-shadow: 10px 10px 5px #888888;">
-                <div class="layui-row">
-                    <div class="layui-col-md3">
-                        <div class="layui-row grid-demo">
-                            <div style="padding-top:150px">
-                                <i class="layui-icon layui-icon-note iconStyle" style="font-size:100px;color: #01AAED"></i> <br>
-                                <div class="jdanaStyle" style="color: #01AAED">
-                                    经典案例
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="layui-col-md9">
-                        <div class="layui-row grid-demo grid-demo-bg1">
-                            <div style="padding-top:120px">
-                                <div class="layui-col-md3" v-for="onecase in cases">
-                                    <a href="#">
-                                        <div class="box jdanbStyle">
-                                            <!-- 这里很重要的点：通过冒号+属性 = "'字符串'+变量"来动态生成标签 -->
-                                            <img :src="'data:image/jpg;base64,'+onecase.pic" style="width: 250px;"><br>
-                                            {{onecase.name}}
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <style>
-            .box {
-                width: 250px;
-                height: 220px;
-                text-align: center;
-            }
-
-            .box img {
-                width: 100%
-            }
-        </style>
-
-        <script>
-            new Vue({
-                el: '#caseToShow',
-                data: {
-                    cases: [],
-                },
-                created: function () {
-                    //为了在内部函数能使用外部函数的this对象，要给它赋值了一个名叫self的变量。
-                    this.getAllCases()
-                },
-                methods: {
-                    getAllCases: function () {
-                        var self = this;
-                        axios
-                            .get("/Apis/getCasesToShow")
-                            .then(response => (
-                                this.cases = response.data.cases,
-                                alert(JSON.stringify(response.data))
-                            ))
-                            .catch(function (error) { // 请求失败处理
-                                alert("数据请求失败wdnmd");
-                            });
-
-                    }
-                }
-            })
-        </script>
-
-        <!-- 处理中案例 -->
-        <div class="layui-card "
-            style="width:100%;border: #9F9F9F;margin:20px auto;text-align: center;background-color: #01AAED">
-            <div style="box-shadow: 10px 10px 5px #888888;">
-                <div class="layui-row">
-                    <div class="layui-col-md9">
-                        <div class="layui-row grid-demo grid-demo-bg1">
-                            <div style="padding-top:40px">
-                                <div class="layui-col-md3 layui-col-md-offset2">
-                                    <a href="#">
-                                        <div class="box clzalbStyle">
-                                            <img src="img/CaseInProcess1.jpg" style="width: 250px;"><br>
-                                            处理中案例一
-                                        </div>
-                                        <style>
-                                            .box {
-                                                width: 300px;
-                                                text-align: center;
-                                            }
-
-                                            .box img {
-                                                width: 100%
-                                            }
-                                        </style>
-                                    </a>
-                                </div>
-                                <div class="layui-col-md3 layui-col-md-offset3">
-                                    <a href="#">
-                                        <div class="box clzalbStyle">
-                                            <img src="img/CaseInProcess2.jpg" style="width: 250px;"><br>
-                                            处理中案例二
-                                        </div>
-                                        <style>
-                                            .box {
-                                                width: 300px;
-                                                text-align: center;
-                                            }
-
-                                            .box img {
-                                                width: 100%
-                                            }
-                                        </style>
-                                    </a>
-                                </div>
-                                <div class="layui-col-md3 layui-col-md-offset5">
-                                    <a href="#">
-                                        <div class="box clzalbStyle">
-                                            <img src="img/CaseInProcess3.jpg" style="width: 250px; height: 190px;"><br>
-                                            处理中案例三
-                                        </div>
-                                        <style>
-                                            .box {
-                                                width: 300px;
-                                                text-align: center;
-                                            }
-
-                                            .box img {
-                                                width: 100%
-                                            }
-                                        </style>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="layui-col-md3">
-                        <div class="layui-row grid-demo">
-                            <div style="padding-top:150px">
-                                <i class="layui-icon layui-icon-time iconStyle" style="font-size:100px;color: #ffffff"></i> <br>
-                                <div class="clzalaStyle">
-                                    处理中案例
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- 会计师介绍 -->
-        <div class="layui-card" style="width:100%;border: #9F9F9F;margin:20px auto;text-align: center;">
-            <div style="box-shadow: 10px 10px 5px #888888;">
-                <div class="layui-row">
-                    <div class="layui-col-md3">
-                        <div class="layui-row grid-demo">
-                            <div style="padding-top:150px">
-                                <i class="layui-icon layui-icon-group iconStyle" style="font-size:100px;color: #01AAED"></i> <br>
-                                <div class="clzalaStyle" style="color: #01AAED">
-                                    会计师介绍
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="layui-col-md9">
-                        <div class="layui-row grid-demo grid-demo-bg1">
-                            <div style="padding-top:40px">
-                                <div class="layui-col-md3 layui-col-md-offset2">
-                                    <a href="#">
-                                        <div class="box jdanbStyle">
-                                            <img src="img/people1.jpg" style="width: 250px;"><br>
-                                            会计师1
-                                        </div>
-                                        <style>
-                                            .box {
-                                                width: 250px;
-                                                text-align: center;
-                                            }
-
-                                            .box img {
-                                                width: 100%
-                                            }
-                                        </style>
-                                    </a>
-                                </div>
-                                <div class="layui-col-md3 layui-col-md-offset3">
-                                    <a href="#">
-                                        <div class="box jdanbStyle">
-                                            <img src="img/people2.jpg" style="width: 250px;"><br>
-                                            会计师2
-                                        </div>
-                                        <style>
-                                            .box {
-                                                width: 250px;
-                                                text-align: center;
-                                            }
-
-                                            .box img {
-                                                width: 100%
-                                            }
-                                        </style>
-                                    </a>
-                                </div>
-                                <div class="layui-col-md3 layui-col-md-offset5">
-                                    <a href="#">
-                                        <div class="box jdanbStyle">
-                                            <img src="img/people3.jpg" style="width: 250px;">
-                                            <br>
-                                            会计师3
-                                        </div>
-                                        <style>
-                                            .box {
-                                                width: 250px;
-                                                text-align: center;
-                                            }
-
-                                            .box img {
-                                                width: 100%
-                                            }
-                                        </style>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
         <!-- 尾部信息 -->
-        <div class="layui-card "
+        <!-- <div class="layui-card "
             style="width:100%; height: 150px; border: #9F9F9F;margin:20px auto;text-align: center;background-color: #01AAED">
 
             <div class="layui-row">
@@ -479,7 +185,7 @@
 
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </div>
 
