--- a/WebTemplate.html
+++ b/WebTemplate.html
@@ -106,22 +106,22 @@
 
                     <a href="./businessScope.html" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-senior iconStyle"></i>
-                        业务范围
+                        关于我们
                     </a>
                 </li>
                 <li class="layui-nav-item">
                     <a href="./secondPeople.html" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-username iconStyle"></i>
-                        会计师介绍
+                        资质证书
                     </a>
                 </li>
                 <li class="layui-nav-item">
                     <a href="./secondClassic.html" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-note iconStyle"></i>
-                        经典案例
+                        联系我们
                     </a>
                 </li>
-                <li class="layui-nav-item">
+                <!-- <li class="layui-nav-item">
                     <a href="./caseInProcess2.html" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-survey iconStyle"></i>
                         处理中案例
@@ -132,7 +132,7 @@
                         <i class="layui-icon layui-icon-dialogue iconStyle"></i>
                         联系我们
                     </a>
-                </li>
+                </li> -->
                 <li class="layui-nav-item">
                     <button type="button" class="layui-btn layui-btn-normal"
                         onclick="javascrtpt:window.location.href='./login'">
