修改为四个页面，删除冗余页面

--- a/WebTemplate.html
+++ b/WebTemplate.html
@@ -110,30 +110,17 @@
                     </a>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="./secondPeople.html" class="dhlStyle" target="layui-body-iframe">
+                    <a href="./certificate.html" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-username iconStyle"></i>
                         资质证书
                     </a>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="./secondClassic.html" class="dhlStyle" target="layui-body-iframe">
+                    <a href="./contactInfo.html" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-note iconStyle"></i>
                         联系我们
                     </a>
-                </li>
-                <!-- <li class="layui-nav-item">
-                    <a href="./caseInProcess2.html" class="dhlStyle" target="layui-body-iframe">
-                        <i class="layui-icon layui-icon-survey iconStyle"></i>
-                        处理中案例
-                    </a>
-                </li>
-                <li class="layui-nav-item">
-                    <a href="./contactInfo.html" class="dhlStyle" target="layui-body-iframe">
-                        <i class="layui-icon layui-icon-dialogue iconStyle"></i>
-                        联系我们
-                    </a>
-                </li> -->
-                <li class="layui-nav-item">
+                </li>                <li class="layui-nav-item">
                     <button type="button" class="layui-btn layui-btn-normal"
                         onclick="javascrtpt:window.location.href='./login'">
                         登录
