--- a/contactInfo.html
+++ b/contactInfo.html
@@ -89,45 +89,42 @@
 <body>
 
 <script src="layui/layui.js"></script>
-
-<div style="width:90%;text-align: center;margin: 0 auto;">
-	
-    <ul class="layui-nav layui-nav-tree layui-nav-side "  lay-filter="test"
-				style="text-align:center;margin:0 auto;background-color: #FFFFFF" >
-        <div style="text-align:center; font-size: 25px;color: #0C0C0C;margin:20px 0px;">
-            <i class="layui-icon layui-icon-username" style="font-size: 30px; "></i>
-            联系我们
-        </div>
-        <hr class="layui-bg-black" style="margin:0 auto">
-        <li class="layui-nav-item"   ><a href="./thirdInfo_addr.html" target="contactIframe">地址</a></li>
-        <hr class="layui-bg-black" style="margin:0 auto">
-        <li class="layui-nav-item"><a href="./thirdInfo_email.html"target="contactIframe">电子邮箱</a></li>
-        <hr class="layui-bg-black"style="margin:0 auto">
-        <li class="layui-nav-item"><a href="./thirdInfo_tel.html"target="contactIframe">联系电话</a></li>
-        <hr class="layui-bg-black"style="margin:0 auto">
-        <li class="layui-nav-item"><a href="./thirdInfo_qq.html"target="contactIframe">QQ/微信</a></li>
-        <hr class="layui-bg-black"style="margin:0 auto">
-
-
-    </ul>
-
-    <div  style="height:90vh;margin:0 auto;text-align: center;">
-
-        <!-- css样式overflow:hidden表示溢出隐藏 -->
-       <iframe src="./thirdInfo_addr.html" name="contactIframe" marginwidth="0" marginheight="0" scrolling="yes"
-            frameborder="0" height="100%" width="100%" >
-            
-        </iframe>
-        <!-- scrolling="yes"表示在iframe中显示滚动条 -->
-        <!-- frameborder="0"规定不显示框架周围的边框 -->
-        <!-- marginheight="1"定义iframe的顶部和底部的边距为1 -->
-        <!-- marginwidth="1"定义iframe的左侧和右侧的边距为1 -->
-        <!-- src=""规定在iframe中显示的文档的URL,最初显示的是系统首页 -->
+<div style="width: 80%;margin: 0 auto;">
+    <div style="width: 100%;margin: 0 auto;text-align: center">
+        <img src="img/logoWithBack.png" alt="企业LOGO" style="width: 50%;text-align: center;margin: 0 auto">
     </div>
+    <h1 style="text-align: center;margin: 0 auto">湖南华晟会计师事务所联系方式</h1>
+
+    <h2 style="line-height: 3em;">
+        一、联系邮箱
+    </h2>
+    <p style="line-height: 2em;font-size: 15px">
+
+
+    </p>
+    <h2 style="line-height: 3em;">
+        二、联系电话
+    </h2>
+    <p style="line-height: 2em;font-size: 15px">
+
+    </p>
+    <h2 style="line-height: 3em;">
+        三、联系电话
+    </h2>
+    <p style="line-height: 2em;font-size: 15px">
+
+
+    </p>
+    <h2 style="line-height: 3em;">
+        四、联系***
+    </h2>
+    <p style="line-height: 2em;font-size: 15px">
+
+    </p>
+
 
 
 </div>
-
 
 
 </body>
