--- a/WebTemplate.html
+++ b/WebTemplate.html
@@ -88,7 +88,7 @@
     <!--导航条-->
     <div class="layui-layout-admin " >
         
-            <ul class="layui-nav layui-bg-blue" lay-filter="" style="text-align: center;">
+            <ul class="layui-nav" lay-filter="" style="background-color: #AAAAAA; text-align: center;">
                 <li
                     style="height:50px;width:100px;padding: 0;display:inline-block;*display:inline;*zoom:1;vertical-align:middle;">
                     <!-- logo -->
