--- a/homepage.html
+++ b/homepage.html
@@ -95,26 +95,17 @@
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">首页</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="jobs.html">关于我们</a>
+                                    <a class="nav-link" href="#">关于我们</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="about.html">资质证书</a>
+                                    <a class="nav-link" href="#">资质证书</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="services.html">联系我们</a>
+                                    <a class="nav-link" href="contactInfo.html">联系我们</a>
                                 </li>
                             </ul>
                         </div>
                     </div>
-                    <!-- <div class="col-lg-2 fixed-on-sm">
-                        <div class="text-white">
-                            <div class="d-flex nav-icons justify-content-end">
-                                <span class="fas fa-search border-right p-1 pr-3 search-toggle"></span>
-                                <span class="fas fa-user border-right p-1 pr-3 ml-3 user-toggle"></span>
-                                <span class="fas fa-align-right p-1 pr-0 ml-3 sidenav-toggle"></span>
-                            </div>
-                        </div>
-                    </div> -->
                 </div>
             </div>
         </nav>
