--- a/WebTemplate.html
+++ b/WebTemplate.html
@@ -88,7 +88,7 @@
     <!--导航条-->
     <div class="layui-layout-admin " >
         
-            <ul class="layui-nav" lay-filter="" style="background-color: #AAAAAA; text-align: center;">
+            <ul class="layui-nav layui-bg-blue" lay-filter="" style="text-align: center;">
                 <li
                     style="height:50px;width:100px;padding: 0;display:inline-block;*display:inline;*zoom:1;vertical-align:middle;">
                     <!-- logo -->
@@ -110,17 +110,30 @@
                     </a>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="./certificate.html" class="dhlStyle" target="layui-body-iframe">
+                    <a href="./secondPeople.html" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-username iconStyle"></i>
                         资质证书
                     </a>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="./contactInfo.html" class="dhlStyle" target="layui-body-iframe">
+                    <a href="./secondClassic.html" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-note iconStyle"></i>
                         联系我们
                     </a>
-                </li>                <li class="layui-nav-item">
+                </li>
+                <!-- <li class="layui-nav-item">
+                    <a href="./caseInProcess2.html" class="dhlStyle" target="layui-body-iframe">
+                        <i class="layui-icon layui-icon-survey iconStyle"></i>
+                        处理中案例
+                    </a>
+                </li>
+                <li class="layui-nav-item">
+                    <a href="./contactInfo.html" class="dhlStyle" target="layui-body-iframe">
+                        <i class="layui-icon layui-icon-dialogue iconStyle"></i>
+                        联系我们
+                    </a>
+                </li> -->
+                <li class="layui-nav-item">
                     <button type="button" class="layui-btn layui-btn-normal"
                         onclick="javascrtpt:window.location.href='./login'">
                         登录
